service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: default
spec:
  type: NodePort
  selector:
    bb: petclinic
  ports:
  - port: 8080
    targetPort: 8080
